# source-trace

./: .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  Source-Trace_Technical_Design.md  package.json  pnpm-lock.yaml  railway.toml
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/src/source_trace_api/: __init__.py  cache.py  citations.py  claims.py  coach.py  config.py  contracts.py  heuristics.py  llm.py  main.py  pipeline.py  trace.py  verifier.py
apps/api/tests/: conftest.py  test_analyze.py  test_citations.py  test_claims.py  test_config.py  test_contract_schema.py  test_heuristics.py  test_llm.py  test_pipeline_llm.py  test_rate_limit.py  test_trace.py  test_verifier_ssrf.py
apps/extension/: package.json  vitest.config.ts  wxt.config.ts
apps/extension/entrypoints/: background.ts
apps/extension/entrypoints/content/: index.tsx
apps/extension/entrypoints/popup/: App.tsx  index.html  main.tsx  popup.css
apps/extension/public/fonts/: NOTO-OFL.txt
apps/extension/src/adapters/: chatgpt.ts  extract.test.ts  extract.ts  index.ts  perplexity.ts  pick.test.ts  pick.ts  types.ts
apps/extension/src/assets/Extension logo design proposal/icons/: README.txt
apps/extension/src/lib/: api.ts  heuristics.test.ts  heuristics.ts  i18n.ts  messaging.ts  publisher.test.ts  publisher.ts  session.ts  settings.test.ts  settings.ts  types.ts
apps/extension/src/ui/: Logo.tsx  Overlay.tsx  format.test.ts  format.ts  highlight.test.ts  highlight.ts  overlay.css  store.ts
infra/docker/: api.Dockerfile
