[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "source-trace-api"
version = "0.1.0"
description = "Source-Trace analysis backend (st-api): stateless FastAPI service returning a normalized Trace Report."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/source_trace_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Line length is owned by the formatter; long i18n string literals can't wrap cleanly.
ignore = ["E501"]
